<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/taskbar_settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.NerfLauncher">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.NerfLauncher.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/nerf_space_16"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taskbar_settings_enabled"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Body1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/taskbar_enabled_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_20"
                android:text="@string/taskbar_settings_height"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Body1" />

            <TextView
                android:id="@+id/taskbar_height_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_4"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Caption" />

            <SeekBar
                android:id="@+id/taskbar_height_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_20"
                android:text="@string/taskbar_settings_icon_size"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Body1" />

            <TextView
                android:id="@+id/taskbar_icon_size_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_4"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Caption" />

            <SeekBar
                android:id="@+id/taskbar_icon_size_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_20"
                android:text="@string/taskbar_settings_transparency"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Body1" />

            <TextView
                android:id="@+id/taskbar_transparency_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_4"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Caption" />

            <SeekBar
                android:id="@+id/taskbar_transparency_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_20"
                android:text="@string/taskbar_settings_background_style"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Body1" />

            <Spinner
                android:id="@+id/taskbar_background_style_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_20"
                android:text="@string/taskbar_settings_pinned_apps"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Body1" />

            <TextView
                android:id="@+id/pinned_apps_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_4"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Caption" />

            <TextView
                android:id="@+id/taskbar_pin_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_8"
                android:text="@string/taskbar_settings_pin_hint"
                android:textAppearance="@style/TextAppearance.NerfLauncher.Caption" />

            <LinearLayout
                android:id="@+id/pinned_apps_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_8"
                android:orientation="vertical" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_pinned_apps_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nerf_space_12"
                android:text="@string/taskbar_settings_clear_pins" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
